<resources>
    <string name="app_name">Liveasy</string>
    <string name="you_ll_receive_a_4_digit_code_to_verify_next">You\'ll receive a 4 digit code to verify next</string>
    <string name="please_enter_your_mobile_number">Please enter your mobile number</string>
    <string name="_91">+91</string>
    <string name="_9532453265">9532453265</string>
    <string name="verify_phone">Verify Phone</string>
    <string name="didn_t_receive_the_code_request_again">Didn\'t receive the code? Request Again</string>
    <string name="code_is_sent_to">Code is sent to</string>
    <string name="didn_t_receive_the_code">Didn\'t receive the code?</string>

</resources>